@@ -1,0 +1,3 @@
+PHP is a programming language designed to be embedded into web pages.
+This module provides access to extended features of MySQL 4.1 and later,
+such as prepared statements.
